# infinity-msfs-build-tools

./: .gitignore  Cargo.toml  README.md  infinity-msfs.toml
crates/infinity-build-core/: Cargo.toml
crates/infinity-build-core/src/: artifact.rs  builder.rs  error.rs  lib.rs  runner.rs
crates/infinity-build-create/: Cargo.toml
crates/infinity-build-create/src/: lib.rs  manifest.rs  render.rs  run.rs
crates/infinity-build-create/templates/rescript-react/: package.json  rescript.json
crates/infinity-build-create/templates/rust-native/: infinity-msfs.toml
crates/infinity-build-create/templates/rust-wasm-gauge/: infinity-msfs.toml  template.toml
crates/infinity-build-create/templates/ts-framework/: infinity-msfs.toml  template.toml
crates/infinity-build-create/templates/ts-framework/src/: index.css
crates/infinity-build-create/templates/ts-react/: .gitignore  template.toml  tsconfig.json
crates/infinity-build-create/templates/ts-react/src/hooks/: render.tsx
crates/infinity-build-create/templates/ts-react/src/replace-me/: index.tsx
crates/infinity-build-js/: Cargo.toml
crates/infinity-build-js/src/: bundler.rs  config.rs  lib.rs  package.rs  templates.rs
crates/infinity-build-js/src/templates/: instrument.cjs  instrument.html
crates/infinity-build-package/: Cargo.toml
crates/infinity-build-package/src/: lib.rs
crates/infinity-build-rust/: Cargo.toml
crates/infinity-build-rust/src/: cargo_meta.rs  config.rs  hooks.rs  lib.rs  plan.rs  stats.rs  steps.rs
crates/infinity-build-sdk/: Cargo.toml
crates/infinity-build-sdk/src/: install.rs  lib.rs
crates/infinity-build-watch/: Cargo.toml
crates/infinity-build-watch/src/: lib.rs
scripts/: publish.ps1  publish.sh
src/: build.rs  build_js.rs  cargo_meta.rs  cli.rs  config.rs  create.rs  doctor.rs  main.rs  package.rs  process.rs  runner.rs  scripts.rs  sdk.rs  sdk_install.rs  stats.rs  ui.rs  util.rs  watch.rs
templates/rescript-react/: .gitignore  infinity-msfs.toml  template.toml
templates/rescript-react/src/: Main.res
templates/rust-native/: Cargo.toml  template.toml
templates/rust-native/src/: main.rs
templates/rust-wasm-gauge/: Cargo.toml
templates/rust-wasm-gauge/src/: lib.rs
templates/rust-wasm-system/: template.toml
templates/rust-wasm-system/src/: lib.rs
templates/ts-framework/: package.json  tsconfig.json
templates/ts-framework/src/: index.tsx
templates/ts-react/: infinity-msfs.toml  package.json
templates/ts-react/src/hooks/: defaults.ts
