[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["cameron_griego@protonmail.com"]
repository = "https://github.com/infinity-MSFS/infinity-msfs-build-tools"
homepage = "https://infinity-simulations.com/docs/developer/build-tools"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"

# rolldown is pre-1.0; pin exactly so dependabot/renovate
# can't quietly bump us to a breaking version.
rolldown = "=0.1.0"
rolldown_plugin = "=0.1.0"
rolldown_common = "=0.1.0"
rolldown_utils = "=0.1.0"
arcstr = "1"

# rolldown_error 0.1.0 / rolldown_resolver 0.1.0 pattern-match
# `ResolveError::PackagePathNotExported` as a tuple variant. oxc_resolver
# 11.12 reshaped it to a struct variant, which breaks the upstream
# build. Pin to the last tuple-variant release so the workspace compiles.
oxc_resolver = "=11.10.0"

# rolldown requires tokio at runtime.
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "fs",
    "io-util",
] }
futures = "0.3"

# ──────────────────────────────────────────────────────────────────
# Root binary crate (infinity-msfs CLI). The build/SDK code that
# already lives in `src/` continues to live there. The new JS and
# build-trait code lives in `crates/`.
# ──────────────────────────────────────────────────────────────────

[package]
name = "infinity-msfs"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "Build/packaging/util CLI for infinity-msfs projects."
license = "MIT"
repository = "https://github.com/infinity-MSFS/infinity-msfs-build-tools"
homepage = "https://infinity-simulations.com/docs/developer/build-tools"
documentation = "https://infinity-simulations.com/docs/developer/build-tools"
authors = ["cameron_griego@protonmail.com"]
keywords = ["msfs", "build", "cli", "flight-simulator", "wasm"]
categories = ["command-line-utilities", "development-tools::build-utils"]
exclude = ["tests/**", "*.png", "*.gif"]

[[bin]]
name = "infinity-msfs"
path = "src/main.rs"

[dependencies]
infinity-build-core = { path = "crates/infinity-build-core", version = "0.2.0" }
infinity-build-js = { path = "crates/infinity-build-js", version = "0.2.0" }

clap = { version = "4.5", features = ["derive", "env"] }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
cargo_metadata = "0.18"
anyhow = { workspace = true }
thiserror = { workspace = true }
console = "0.15"
indicatif = "0.17"
ureq = "2"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
msi = "0.10"
cab = "0.6"
tokio = { workspace = true }
regex = { workspace = true }
