[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.3.6"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["cameron_griego@protonmail.com"]
repository = "https://github.com/infinity-MSFS/infinity-msfs-build-tools"
homepage = "https://infinity-simulations.com/docs/developer/build-tools"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"

# Pre-1.0; pin exactly so dependabot/renovate can't quietly bump us.
rolldown = "=0.1.0"
rolldown_plugin = "=0.1.0"
rolldown_common = "=0.1.0"
rolldown_utils = "=0.1.0"
arcstr = "1"

# rolldown_error 0.1.0 / rolldown_resolver 0.1.0 pattern-match
# `ResolveError::PackagePathNotExported` as a tuple variant. oxc_resolver
# 11.12 reshaped it to a struct variant, breaking the upstream build.
# Pin to the last tuple-variant release.
oxc_resolver = "=11.10.0"

tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "fs",
    "io-util",
] }
futures = "0.3"

[package]
name = "infinity-msfs"
version.workspace = true
edition = "2024"
rust-version = "1.85"
description = "Build/packaging/util CLI for infinity-msfs projects."
license = "MIT"
repository = "https://github.com/infinity-MSFS/infinity-msfs-build-tools"
homepage = "https://infinity-simulations.com/docs/developer/build-tools"
documentation = "https://infinity-simulations.com/docs/developer/build-tools"
authors = ["cameron_griego@protonmail.com"]
keywords = ["msfs", "build", "cli", "flight-simulator", "wasm"]
categories = ["command-line-utilities", "development-tools::build-utils"]
exclude = ["tests/**", "*.png", "*.gif"]

[[bin]]
name = "infinity-msfs"
path = "src/main.rs"

[dependencies]
infinity-build-core = { path = "crates/infinity-build-core", version = "0.3.6" }
infinity-build-js = { path = "crates/infinity-build-js", version = "0.3.6" }
infinity-build-rust = { path = "crates/infinity-build-rust", version = "0.3.6" }
infinity-build-package = { path = "crates/infinity-build-package", version = "0.3.6" }
infinity-build-sdk = { path = "crates/infinity-build-sdk", version = "0.3.6" }
infinity-build-watch = { path = "crates/infinity-build-watch", version = "0.3.6" }
infinity-build-create = { path = "crates/infinity-build-create", version = "0.3.6" }

clap = { version = "4.5", features = ["derive", "env"] }
serde = { workspace = true }
toml = { workspace = true }
cargo_metadata = "0.18"
anyhow = { workspace = true }
console = "0.15"
indicatif = "0.17"
tokio = { workspace = true }
regex = { workspace = true }
