[package]
name = "infinity-build-create"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Project scaffolder for infinity-msfs templates. Embeds template files, runs an interactive prompt loop, renders projects to disk."

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
console = "0.15"
dialoguer = { version = "0.11", default-features = false }
include_dir = "0.7"
heck = "0.5"
