[package]
name = "infinity-build-rust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Cargo + wasm-opt build pipeline for MSFS WASM gauges and native SimConnect apps."

[dependencies]
infinity-build-core = { path = "../infinity-build-core", version = "0.3.1" }
infinity-build-sdk = { path = "../infinity-build-sdk", version = "0.3.1" }

anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
cargo_metadata = "0.18"
