[package]
name = "infinity-build-watch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Filesystem watcher with debounced rebuild callbacks for the infinity-msfs build tools."

[dependencies]
anyhow = { workspace = true }
console = "0.15"
notify = "6"
notify-debouncer-mini = { version = "0.4", default-features = false }
